# dedispersion

./: .gitignore  CMakeLists.txt  README.md  benchmark-tune.sh  launch.txt  threads.sh
include/: band_functions.h  dedispersion.h  fake_signal.h  msd.h  params.h  shifts.h  signal_functions.h  transpose.h  write_raw_data.h  write_results.h
src/: band_functions.c  dedispersion.c  fake_signal.c  main.c  msd.c  shifts.c  signal_functions.c  transpose.c  write_raw_data.c  write_results.c
